Bug List: (This bug is not in your last search results)   Show last search results      Search page      Enter new bug
Bug#: 33880
Product:  
Component:  
Status: RESOLVED
Resolution: FIXED
Assigned To: Jakub Jelinek <jakub@gcc.gnu.org>
Host:
Reported against  
Priority:  
Severity:  
Target Milestone:  
 
 
Target:
Reporter: burnus@gcc.gnu.org
Add CC:
CC:
Remove selected CCs
Build:
URL:
Summary:
Keywords:
Known to work:
Known to fail:

Attachment Description Type Created Size Actions
Create a New Attachment (proposed patch, testcase, etc.) View All

Bug 33880 depends on: Show dependency tree
Show dependency graph
Bug 33880 blocks:

Additional Comments:






View Bug Activity   |   Format For Printing   |   Clone This Bug


Description:   Last confirmed: 2008-01-25 10:04 Opened: 2007-10-24 12:21
This is with both 4.2 and 4.3 on x86_64/Linux.

gfortran-4.3 -fopenmp a.f90
a.f90: In function 'MAIN__':
a.f90:3: internal compiler error: in extract_omp_for_data, at omp-low.c:162

Test case (by Xavier Andrade):
--------------------------
program testbug
  integer :: ii
  !$omp parallel do
  do ii = 1, 1000
  end do
contains
  subroutine something()
    ii = 0
  end subroutine something
end program testbug
--------------------------

------- Comment #1 From Jakub Jelinek 2007-10-24 13:23 -------
/* PR middle-end/33880 */
/* { dg-do compile } */
/* { dg-options "-O2 -fopenmp" } */

int
foo (void)
{
  int i = 0;
  void bar (void) { i++; }
  bar ();
  #pragma omp parallel for
    for (i = 0; i < 10; i++)
      ;
  i = 3;
  bar ();
  return i;
}

ICEs the same way.

------- Comment #2 From Andrew Pinski 2007-11-19 05:37 -------
Confirmed.  Another nested function with openmp interaction case.

------- Comment #3 From burnus@gcc.gnu.org 2008-01-13 21:54 -------
Jakub, is there any chance that it can still get fixed for 4.3.0?

------- Comment #4 From Jakub Jelinek 2008-01-25 10:04 -------
Yes.  Have a fix, now need to write some more testcases.

------- Comment #5 From Jakub Jelinek 2008-01-25 12:55 -------
Subject: Bug 33880

Author: jakub
Date: Fri Jan 25 12:54:42 2008
New Revision: 131825

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=131825
Log:
        PR middle-end/33880
        * tree-nested.c (walk_omp_for): New function.
        (convert_nonlocal_reference, convert_local_reference): Call
        walk_omp_for on OMP_FOR.
        (convert_call_expr): Call walk_body on OMP_FOR's
        OMP_FOR_PRE_INIT_BODY.

        * testsuite/libgomp.c/pr33880.c: New test.
        * testsuite/libgomp.fortran/pr33880.f90: New test.

Added:
    trunk/libgomp/testsuite/libgomp.c/pr33880.c
    trunk/libgomp/testsuite/libgomp.fortran/pr33880.f90
Modified:
    trunk/gcc/ChangeLog
    trunk/gcc/tree-nested.c
    trunk/libgomp/ChangeLog

------- Comment #6 From Jakub Jelinek 2008-01-25 12:55 -------
Fixed.

------- Comment #7 From Richard Guenther 2008-02-06 20:36 -------
*** Bug 35108 has been marked as a duplicate of this bug. ***

Bug List: (This bug is not in your last search results)   Show last search results      Search page      Enter new bug