	PR middle-end/33880 	* tree-nested.c (walk_omp_for): New function. 	(convert_nonlocal_reference, convert_local_reference): Call 	walk_omp_for on OMP_FOR. 	(convert_call_expr): Call walk_body on OMP_FOR's 	OMP_FOR_PRE_INIT_BODY.

* testsuite/libgomp.c/pr33880.c: New test.
	* testsuite/libgomp.fortran/pr33880.f90: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@131825 138bc75d-0d04-0410-961f-82ee72b054a4